src/validation/tests/snapshots/rusty__validation__tests__recursive_validation_tests__structs__two_cycles_aa_and_aba.snap
---
source: src/validation/tests/recursive_validation_tests.rs
expression: "&diagnostics"
---
error: Recursive data structure `A -> A` has infinite size
  ┌─ <internal>:2:18
  │
2 │             TYPE A : STRUCT
  │                  ^ Recursive data structure `A -> A` has infinite size

error: Recursive data structure `A -> B -> A` has infinite size
  ┌─ <internal>:2:18
  │
2 │             TYPE A : STRUCT
  │                  ^ Recursive data structure `A -> B -> A` has infinite size
  ·
7 │             TYPE B : STRUCT
  │                  - see also


